--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <!-- import from GoogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body> 
     <header>
-
+        <!-- logo -->
+        <div class="logo">
+            <img id="logo" src="img/Logo.png" alt="Logo">
+            <strong>Toboolist</strong>
+        </div>
     </header>
     
     <nav>
-
+        <div class="container">
+        <!-- pulsanti lista -->
+        <a class="button task" href="#">Add Task</a>
+        <a class="button section" href="#">Add Section</a>
+        </div>
     </nav>
     
     <main>
+        <div class="container">
 
+        </div>
     </main>
 </body>
 </html>
