--- a/index.html
+++ b/index.html
@@ -30,7 +30,54 @@
     
     <main>
         <div class="container">
-
+            <section>
+                <h2>&#11206;New Task</h2>
+                <ul>
+                    <li class="check">
+                        Quarterly Newsletter
+                        <span class="square editorial">Editorial</span>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>&#11206;Today</h2>
+                <ul>
+                    <li class="check">
+                        Recruiting blog post
+                        <span class="square editorial">Editorial</span>
+                    </li>
+                    <li class="check">
+                        Mobile app launch
+                        <span class="square q1">Q1 Goals</span>
+                    </li>
+                    <li class="cross">
+                        Interview John H.
+                        <span class="square recruiting">Recruiting</span>
+                    </li>
+                    <li class="check">
+                        Summit update to mobile storefronts
+                        <span class="square mobile">Mobile</span>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>&#11206;Upcoming</h2>
+                <ul>
+                    <li class="cross">Schedule meeting with Alex</li>
+                    <li class="check">
+                        Homepage refresh
+                        <span class="square website">Website</span>
+                    </li>
+                    <li class="check">
+                        Onboard new Sales team members
+                        <span class="square sales">Sales</span>
+                    </li>
+                    <li class="check">
+                        Review editorial calendar
+                        <span class="square editorial">Editorial</span>
+                    </li>
+                </ul>
+            </section>
         </div>
     </main>
 </body>
