--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <section>
                     <h2>&#11206;New Task</h2>
                     <ul>
-                        <li class="check">
+                        <li>
+                            <strong class="check">&check;</strong> 
                             Quarterly Newsletter
                             <span class="square editorial">Editorial</span>
                         </li>
@@ -43,19 +44,23 @@
                 <section>
                     <h2>&#11206;Today</h2>
                     <ul>
-                        <li class="check">
+                        <li>
+                            <strong class="check">&check;</strong> 
                             Recruiting blog post
                             <span class="square editorial">Editorial</span>
                         </li>
-                        <li class="check">
+                        <li>
+                            <strong class="check">&check;</strong> 
                             Mobile app launch
                             <span class="square q1">Q1 Goals</span>
                         </li>
-                        <li class="cross">
+                        <li>
+                            <strong class="cross">&cross;</strong> 
                             Interview John H.
                             <span class="square recruiting">Recruiting</span>
                         </li>
-                        <li class="check">
+                        <li>
+                            <strong class="check">&check;</strong> 
                             Summit update to mobile storefronts
                             <span class="square mobile">Mobile</span>
                         </li>
@@ -64,16 +69,21 @@
                 <section>
                     <h2>&#11206;Upcoming</h2>
                     <ul>
-                        <li class="cross">Schedule meeting with Alex</li>
-                        <li class="check">
+                        <li>
+                            <strong class="cross">&cross;</strong> 
+                            Schedule meeting with Alex</li>
+                        <li>
+                            <strong class="check">&check;</strong> 
                             Homepage refresh
                             <span class="square website">Website</span>
                         </li>
-                        <li class="check">
+                        <li>
+                            <strong class="check">&check;</strong> 
                             Onboard new Sales team members
                             <span class="square sales">Sales</span>
                         </li>
-                        <li class="check">
+                        <li>
+                            <strong class="check">&check;</strong> 
                             Review editorial calendar
                             <span class="square editorial">Editorial</span>
                         </li>
