--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="list-layout">
                 <section>
-                    <h2>&#11206;New Task</h2>
+                    <h2 class="list-title">&#11206;New Task</h2>
                     <ul>
                         <li>
                             <strong class="check">&check;</strong> 
@@ -42,7 +42,7 @@
                     </ul>
                 </section>
                 <section>
-                    <h2>&#11206;Today</h2>
+                    <h2 class="list-title">&#11206;Today</h2>
                     <ul>
                         <li>
                             <strong class="check">&check;</strong> 
@@ -67,7 +67,7 @@
                     </ul>
                 </section>
                 <section>
-                    <h2>&#11206;Upcoming</h2>
+                    <h2 class="list-title">&#11206;Upcoming</h2>
                     <ul>
                         <li>
                             <strong class="cross">&cross;</strong> 
