--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     
     <nav>
-        <div class="container">
+        <div class="container top">
         <!-- pulsanti lista -->
         <a class="button task" href="#">Add Task</a>
         <a class="button section" href="#">Add Section</a>
@@ -29,7 +29,7 @@
     </nav>
     
     <main>
-        <div class="container">
+        <div class="container bottom">
             <div class="list-layout">
                 <section>
                     <h2 class="list-title">&#11206;New Task</h2>
